--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
-<html lang="ko">
-  <head>
-    <meta charset="utf-8" />
-    <title>👰🏻🤵🏽힘찬&정은, 결혼합니다</title>
-  </head>
+<html lang='ko'>
+<head>
+	<meta property="og:title" content="조힘찬 박정은 청첩장" />
+	<meta property="og:url" content="조힘찬 박정은 결혼 청첩장 입니다." />		
+	<meta charset='utf-8'>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">    
+	<title>힘찬&정은, 결혼합니다</title>
+	<link rel="stylesheet" href="/mcard/resource/lib/bootstrap/css/bootstrap.css">
+	<link rel="stylesheet" href="/mcard/resource/mcard.css">
+</head>
   <body>
-    <noscript>
-      <strong></strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+  <div class='col-xs-12'>
+  <div class='calendar'>
+    <div class='month'>2021年 10月</div>
+    <div>
+      <table class='table day'>
+        <tr><td>일</td><td>월</td><td>화</td><td>수</td><td>목</td><td>금</td><td>토</td></tr>
+        <tr><td></td><td></td><td></td><td></td><td>1</td><td>2</td><td>3</td></tr>
+        <tr><td>4</td><td>5</td><td>6</td><td>7</td><td>8</td><td>9</td><td>10</td></tr>
+        <tr><td>11</td><td>12</td><td>13</td><td>14</td><td>15</td><td>16</td><td>17</td></tr>
+        <tr><td>18</td><td>19</td><td>20</td><td>21</td><td>22</td><td>23</td><td>24</td></tr>
+        <tr><td>25</td><td>26</td><td>27</td><td>28</td><td>29</td><td>30</td><td class='d-day'>31</td></tr>
+      </table>
+    </div>
+  </div>
+</div>
   </body>
 </html>
