--- a/index.html
+++ b/index.html
@@ -1,30 +1,85 @@
+  
 <!DOCTYPE html>
-<html lang='ko'>
+<html lang="en">
 <head>
-	<meta property="og:title" content="조힘찬 박정은 청첩장" />
-	<meta property="og:url" content="조힘찬 박정은 결혼 청첩장 입니다." />		
-	<meta charset='utf-8'>
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta name="viewport" content="width=device-width, initial-scale=1">    
-	<title>힘찬&정은, 결혼합니다</title>
-	<link rel="stylesheet" href="/mcard/resource/lib/bootstrap/css/bootstrap.css">
-	<link rel="stylesheet" href="/mcard/resource/mcard.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./style.css">
+    <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding|Nanum+Pen+Script|Sunflower:300&display=swap" rel="stylesheet">    
+    <title> 망이 & 몽이 청첩장</title>
 </head>
-  <body>
-  <div class='col-xs-12'>
-  <div class='calendar'>
-    <div class='month'>2021年 10月</div>
-    <div>
-      <table class='table day'>
-        <tr><td>일</td><td>월</td><td>화</td><td>수</td><td>목</td><td>금</td><td>토</td></tr>
-        <tr><td></td><td></td><td></td><td></td><td>1</td><td>2</td><td>3</td></tr>
-        <tr><td>4</td><td>5</td><td>6</td><td>7</td><td>8</td><td>9</td><td>10</td></tr>
-        <tr><td>11</td><td>12</td><td>13</td><td>14</td><td>15</td><td>16</td><td>17</td></tr>
-        <tr><td>18</td><td>19</td><td>20</td><td>21</td><td>22</td><td>23</td><td>24</td></tr>
-        <tr><td>25</td><td>26</td><td>27</td><td>28</td><td>29</td><td>30</td><td class='d-day'>31</td></tr>
-      </table>
-    </div>
-  </div>
-</div>
-  </body>
+
+<body>
+    <section id="main_visual">
+        <header id="main_header">
+            <h1>몽이, 망이 결혼합니다.</h1>
+            <div class="info">
+                <time>21.10.16<br></time>
+            </div>
+        </header>
+    </section>
+
+    <section id="intro">
+        <h2>저희 두 사람이<br>
+            첫 날을 함께해 주셔서 감사합니다
+        </h2>
+        <p>새로운 출발이라고 생각하는 결혼식<br>
+            기다리고 기다렸던 이 날이 오기까지<br>            
+            많은 사람들의 관심이 저희를<br>            
+            여기까지 올 수 있게 만들었던거 같습니다<br>            
+            앞으로도 행복한 가정을 이룰 수 있도록<br>            
+            축복을 빌어주세요.<br>
+        </p>
+        <div class="intro_name">
+            <span>몽이</span> 그리고 <span>망이</span>
+        </div>
+        <address>2021년 11월 16일 토요일 오후 2시
+            <br>부산 디엘 웨딩홀</address>
+    </section>
+
+    <section id="photo">
+        <ul class="photo_list">
+            <li><img class="img_responsive" src="./imgs/photo@2x.jpg" alt="사진1"></li>
+            <li>
+                <div class="left">
+                    <img class="img_responsive" src="./imgs/asdasd.jpg" alt="사진2">
+                </div>
+                <div class="right">
+                    <h3>2 0 2 1<br>1 0 1 6</h3>
+                </div>
+            </li>
+            <li><img class="img_responsive" src="./imgs/mobile_G05Z09G1KN88.jpeg" alt="사진3"></li>
+            <li><img class="img_responsive" src="./imgs/2a9b7ca0ef53ed0dc1dc54da23b9754d.jpg" alt="사진4"></li>
+        </ul>
+    </section>
+
+    <section id="invitation">
+        <h2>초대합니다.</h2>
+        <time>2021년 10월 16일 토요일 오후 2시00분</time>
+        <div class="address">
+            부산 디엘 웨딩홀 <br>            
+        </div>
+    </section>
+
+    <section id="map">
+        <iframe
+         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3163.770250914712!2d126.9732484161876!3d37.5369127798036!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca215864db669%3A0x5c45ba90f9782300!2z666k7KeA7JeE7Juo65Sp7ZmA!5e0!3m2!1sko!2skr!4v1575248064792!5m2!1sko!2skr"
+          width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+    </section>
+
+    <footer>
+        <ul class="tranport">
+            <li>지하철 범일동역</li>
+            <li>XXX 정류장<br>
+                111, 2222, 3333, 444, 555
+            </li>
+            <li>XXX 정류쇼<br>
+                111, 2222, 3333, 444, 555
+            </li>
+        </ul>
+    </footer>
+</body>
 </html>
